# turso

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  x.txt
.cargo/: config.toml
.github/workflows/: rust.yml
assertion/: Cargo.toml  field.rs  level_filters.rs  lib.rs  macros.rs
bindings/java/: gradle.properties
bindings/javascript/: package-lock.json  package.json
bindings/react-native/: package-lock.json  package.json
bindings/rust/: Cargo.toml
cli/: Cargo.toml  app.rs  main.rs  readline.rs  readline_utils.rs
cli_wasm/: Cargo.toml  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
cli_wasm/src/: App.tsx  main.tsx
core/: Cargo.toml  busy.rs  connection.rs  error.rs  io_ops.rs  lib.rs  numeric.rs  sans_io.rs  schema.rs  statement.rs  types.rs  util.rs
core/alloc/: allocator.rs  arc.rs  collections.rs  mod.rs
core/benches/: alloc_collections.rs
core/ext/: mod.rs
core/functions/: datetime.rs
core/incremental/: aggregate_operator.rs  cursor.rs  dbsp.rs  join_operator.rs
core/index_method/: mod.rs
core/io/: completions.rs
core/json/: json_operations.rs  json_path.rs  mod.rs  ops.rs
core/mvcc/: cursor.rs  yield_hooks.rs  yield_points.rs
core/numeric/: mod.rs
core/storage/: btree.rs  header_accessor.rs  journal_mode.rs  page_cache.rs  pager.rs  sqlite3_ondisk.rs  (+1 more)
docs/: mvcc-sql-tests-plan.md
extensions/async_file/: Cargo.toml
extensions/async_file/src/: lib.rs
extensions/full_text/: Cargo.toml
extensions/full_text/src/: directory.rs  index.rs  lib.rs
extensions/opendal/: Cargo.toml
extensions/opendal/src/: lib.rs  operator.rs
fuzzer_results/: unique_errors.json
scripts/: compare-divan-std-turso.py
scripts/generate/: Cargo.toml  app.rs  main.rs
scripts/generate/handlers/: extension.rs
scripts/generate/src/: main.rs
scripts/generate/templates/extension/: Cargo.toml.hbs  agg.rs.hbs  lib.rs.hbs  scalar.rs.hbs  vtab.rs.hbs
simulator/: Cargo.toml  lib.rs  main.rs
testing/: all.test  between.test  insert.test  select.test  values.test
tests/: Cargo.toml
(+159 files in other folders)
