[package]
authors.workspace = true
description = "Limbo Async File extension"
edition.workspace = true
license.workspace = true
name = "limbo_async_file"
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
static = ["limbo_ext/static"]

[dependencies]
bytes = "1.10.1"
limbo_ext = { workspace = true, features = ["static"] }
tokio = "1.44.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mimalloc = { version = "0.1", default-features = false }
