[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "generate"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
convert_case = "0.7.1"
handlebars = "6.3.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

[[bin]]
name = "generate"
path = "main.rs"
